[package]
name = "copy_benchmarks"
version = "0.1.0"
authors = ["Valentin Vasilev <3volny@gmail.com>"]
edition = "2021"

[dev-dependencies]
criterion = {version = "0.4", features = ["html_reports"]}
regex = {version = "1.8", features = ["unicode-perl"]}

[[bench]]
name = "copies"
harness = false

[dependencies]
# gcd = "2.3.0"
pprof = {version = "0.11.1", features =  ["flamegraph", "criterion"]}
seq-macro = "0.3.3"

[profile.release]
debug = true
